# platform.core.appfw.manifest-parser

./: AUTHORS  CMakeLists.txt  LICENSE
cmake/Modules/: ApplyPkgConfig.cmake
data/: CMakeLists.txt
packaging/: manifest-parser.spec
src/: CMakeLists.txt
src/delta/: CMakeLists.txt  delta-manifest-handlers.pc.in  delta_handler.cc  delta_handler.h  delta_parser.cc  delta_parser.h
src/examples/: CMakeLists.txt  config.xml  main.cc
src/examples/custom_handlers/: handler_constants.cc  handler_constants.h  item_handler.cc  item_handler.h  item_list_handler.cc  item_list_handler.h
src/manifest_handlers/: CMakeLists.txt  account_handler.cc  account_handler.h  app_control_handler.cc  app_control_handler.h  application_icons_handler.cc  application_icons_handler.h  application_manifest_constants.cc  application_manifest_constants.h  appwidget_handler.cc  appwidget_handler.h  background_category_handler.cc  background_category_handler.h  category_handler.cc  category_handler.h  content_handler.cc  content_handler.h  csp_handler.cc  csp_handler.h  ime_handler.cc  ime_handler.h  manifest-handlers.pc.in  metadata_handler.cc  metadata_handler.h  navigation_handler.cc  navigation_handler.h  permissions_handler.cc  permissions_handler.h  platform_version.cc  platform_version.h  service_handler.cc  service_handler.h  setting_handler.cc  setting_handler.h  splash_screen_handler.cc  splash_screen_handler.h  tizen_application_handler.cc  tizen_application_handler.h  warp_handler.cc  warp_handler.h  (+4 more)
src/manifest_parser/: CMakeLists.txt  manifest-parser.pc.in  manifest.cc  manifest.h  manifest_constants.h  manifest_handler.cc  manifest_handler.h  manifest_parser.cc  manifest_parser.h  manifest_parser_impl.cc  manifest_parser_impl.h  manifest_util.cc  manifest_util.h  permission_types.h  system_locale.cc  system_locale.h  values.cc  values.h
src/manifest_parser/utils/: CMakeLists.txt  iri_util.cc  iri_util.h  language_tag_validator.cc  language_tag_validator.h  logger.h  logging.cc  logging.h  manifest-parser-utils.pc.in  string_util.cc  string_util.h  version_number.cc  version_number.h  w3c_languages.cc  w3c_languages.h
src/tpk_manifest_handlers/: CMakeLists.txt  account_handler.cc  account_handler.h  app_control_handler.cc  app_control_handler.h  application_icons_handler.cc  application_icons_handler.h  application_manifest_constants.cc  application_manifest_constants.h  author_handler.cc  author_handler.h  background_category_handler.cc  background_category_handler.h  datacontrol_handler.cc  datacontrol_handler.h  description_handler.cc  description_handler.h  label_handler.cc  label_handler.h  metadata_handler.cc  metadata_handler.h  package_handler.cc  package_handler.h  package_handler.h.autosave  privileges_handler.cc  privileges_handler.h  profile_handler.cc  profile_handler.h  service_application_handler.cc  service_application_handler.h  shortcut_handler.cc  shortcut_handler.h  tizen_application_handler.cc  tizen_application_handler.h  tpk-manifest-handlers.pc.in  tpk_config_parser.cc  tpk_config_parser.h  ui_and_service_application_handlers.h  ui_and_service_application_infos.h  ui_application_handler.cc  (+5 more)
src/tpk_manifest_handlers/common/: application_handler.cc  application_handler.h
src/unit_tests/: CMakeLists.txt  content_handler_unittest.cc  parser_manifest_handler_unittest.cc  parser_manifest_unittest.cc  parser_manifest_util_unittest.cc  parser_unittest.cc  service_handler_unittest.cc  string_util_unittest.cc  utils_values_unittest.cc  version_number_unittest.cc
src/utils/: CMakeLists.txt  iri_util.cc  iri_util.h  language_tag_validator.cc  language_tag_validator.h  logging.h  macros.h  manifest-parser-utils.pc.in  string_util.cc  string_util.h  version_number.cc  version_number.h  w3c_languages.cc  w3c_languages.h
src/wgt_manifest_handlers/: CMakeLists.txt  account_handler.cc  account_handler.h  app_control_handler.cc  app_control_handler.h  application_icons_handler.cc  application_icons_handler.h  application_manifest_constants.cc  application_manifest_constants.h  appwidget_handler.h  background_category_handler.h  category_handler.cc  category_handler.h  content_handler.cc  content_handler.h  csp_handler.h  ime_handler.cc  ime_handler.h  metadata_handler.cc  metadata_handler.h  navigation_handler.h  permissions_handler.cc  permissions_handler.h  platform_version.cc  platform_version.h  service_handler.h  setting_handler.cc  setting_handler.h  splash_screen_handler.cc  splash_screen_handler.h  tizen_application_handler.cc  tizen_application_handler.h  warp_handler.h  widget_config_parser.cc  widget_config_parser.h  widget_handler.cc  widget_handler.h
