# Target - sources
SET(SRCS
  custom_handlers/handler_constants.cc
  custom_handlers/item_handler.cc
  custom_handlers/item_list_handler.cc
  main.cc
)

# Target - definition
ADD_EXECUTABLE(${TARGET_EXAMPLES} ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_EXAMPLES} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/")

# Target - deps
APPLY_PKG_CONFIG(${TARGET_EXAMPLES} PUBLIC
  Boost
)

TARGET_LINK_LIBRARIES(${TARGET_EXAMPLES} PUBLIC ${TARGET_LIBNAME_PARSER} ${TARGET_LIBNAME_WGT_MANIFEST_HANDLERS})

INSTALL(FILES config.xml DESTINATION ${SHAREDIR}/manifest-parser)

# Extra
SET_TARGET_PROPERTIES(${TARGET_EXAMPLES} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${TARGET_EXAMPLES} PROPERTIES SOVERSION ${VERSION_MAJOR})

# Install
INSTALL(TARGETS ${TARGET_EXAMPLES} DESTINATION ${BINDIR}/manifest-parser)
