# Target - sources
SET(SRCS
  manifest.cc
  manifest_handler.cc
  manifest_parser.cc
  manifest_util.cc
  system_locale.cc
  values.cc
)

SET(INCLUDES
  ${CMAKE_CURRENT_SOURCE_DIR}/manifest.h
  ${CMAKE_CURRENT_SOURCE_DIR}/manifest_constants.h
  ${CMAKE_CURRENT_SOURCE_DIR}/manifest_handler.h
  ${CMAKE_CURRENT_SOURCE_DIR}/manifest_parser.h
  ${CMAKE_CURRENT_SOURCE_DIR}/permission_types.h
  ${CMAKE_CURRENT_SOURCE_DIR}/values.h
)

# Target - definition
ADD_LIBRARY(${TARGET_LIBNAME_PARSER} SHARED ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_LIBNAME_PARSER} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")
# Target - deps
APPLY_PKG_CONFIG(${TARGET_LIBNAME_PARSER} PUBLIC
  LIBIRI_DEPS
  LIBXML_DEPS
  PKGMGR_INFO_DEPS
  VCONF_DEPS
  Boost
)

# Extra
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_PARSER} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_PARSER} PROPERTIES SOVERSION ${VERSION_MAJOR})

# Target - in-package deps
TARGET_LINK_LIBRARIES(${TARGET_LIBNAME_PARSER} PUBLIC ${TARGET_LIBNAME_UTILS})

# Install
INSTALL(TARGETS ${TARGET_LIBNAME_PARSER} DESTINATION ${LIB_INSTALL_DIR})

# Install includes
#INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} DESTINATION ${INCLUDEDIR}
#        FILES_MATCHING PATTERN "*.h")
INSTALL(FILES ${INCLUDES} DESTINATION ${INCLUDEDIR}/manifest_parser)

# Configure and install pkgconfig file
SET(PKG_FILE manifest-parser.pc)
CONFIGURE_FILE(${PKG_FILE}.in ${PKG_FILE} @ONLY)
INSTALL(FILES ${PKG_FILE} DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)
