# Target - sources
SET(SRCS
  iri_util.cc
  string_util.cc
  language_tag_validator.cc
  version_number.cc
  w3c_languages.cc
)
# Target - definition
ADD_LIBRARY(${TARGET_LIBNAME_UTILS} SHARED ${SRCS})
# Target - includes
TARGET_INCLUDE_DIRECTORIES(${TARGET_LIBNAME_UTILS} PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/../")

# Target - deps
APPLY_PKG_CONFIG(${TARGET_LIBNAME_UTILS} PUBLIC
  LIBIRI_DEPS
  Boost
)

# Extra
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_UTILS} PROPERTIES VERSION ${VERSION})
SET_TARGET_PROPERTIES(${TARGET_LIBNAME_UTILS} PROPERTIES SOVERSION ${VERSION_MAJOR})

# Install
INSTALL(TARGETS ${TARGET_LIBNAME_UTILS} DESTINATION ${LIB_INSTALL_DIR})
